# ParallellizedGameOfLife

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  XeonCMakeLists.txt  loop_analysys.key  maker.sh  requirements.txt  run.sh  run2.sh  script.sh  todo.txt
code/: board.cpp  board.h  customBoard.cpp  experiments.ipynb  game_of_life_dyn_thread.cpp  game_of_life_ff.cpp  game_of_life_seq.cpp  game_of_life_thread.cpp  game_of_life_threadpool.cpp  mean_std.py  plots.ipynb  plots.py  rules.cpp  rules.h  simulation.cpp  solver_dyn_thread.cpp  solver_ff.cpp  solver_ff_farm.cpp  solver_ff_parfor.cpp  solver_seq.cpp  solver_thread.cpp  solver_threadpool.cpp  solvers.h  utimer.cpp
exec/: seq
results/: ff_10000_1.txt  ff_10000_10.txt  ff_10000_100.txt  ff_10000_25.txt  ff_10000_250.txt  ff_10000_5.txt  ff_10000_50.txt  ff_10000_500.txt  ff_1000_1.txt  ff_1000_10.txt  ff_1000_100.txt  ff_1000_25.txt  ff_1000_250.txt  ff_1000_5.txt  ff_1000_50.txt  ff_1000_500.txt  ff_100_1.txt  ff_100_10.txt  ff_100_100.txt  ff_100_25.txt  ff_100_250.txt  ff_100_5.txt  ff_100_50.txt  ff_100_500.txt  ff_10_1.txt  ff_10_10.txt  ff_10_100.txt  ff_10_25.txt  ff_10_250.txt  ff_10_5.txt  ff_10_50.txt  ff_10_500.txt  thread_10000_1.txt  thread_10000_10.txt  thread_10000_100.txt  thread_10000_25.txt  thread_10000_250.txt  thread_10000_5.txt  thread_10000_50.txt  thread_10000_500.txt  (+24 more)
results_mac/: ff_10000_1.txt  ff_10000_2.txt  ff_10000_3.txt  ff_10000_4.txt  ff_10000_5.txt  ff_10000_6.txt  ff_10000_7.txt  ff_10000_8.txt  ff_1000_1.txt  ff_1000_2.txt  ff_1000_3.txt  ff_1000_4.txt  ff_1000_5.txt  ff_1000_6.txt  ff_1000_7.txt  ff_1000_8.txt  seq_1000.txt  seq_10000.txt  thread_10000_1.txt  thread_10000_2.txt  thread_10000_3.txt  thread_10000_4.txt  thread_10000_5.txt  thread_10000_6.txt  thread_10000_7.txt  thread_10000_8.txt  thread_1000_1.txt  thread_1000_2.txt  thread_1000_3.txt  thread_1000_4.txt  thread_1000_5.txt  thread_1000_6.txt  thread_1000_7.txt  thread_1000_8.txt
(+87 files in other folders)
